# pgmeta

./: cli.py  generate.py  pyproject.toml  readme.md
defs/: column_def.py  common.py  defs.py  relation_def.py  table_def.py
parsers/: generate_ddl.py  test_generate_ddl.py
parsers/templates/: create_foreign_key.jinja2  create_index.jinja2  create_m2m_reln.jinja2  create_table.jinja2
