[tool.poetry]
name = "pgmeta"
version = "0.1.0"
description = "Postgres DDL generator"
authors = ["\"Suman Das\" <59254445+sumandas0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
